# pandas-datareader

./: .codecov.yml  .coveragerc  .doctr-files  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  cache.html  cache.sqlite  conftest.py  genindex.html  github_deploy_key_pydata_pandas_datareader.enc  index.html  objects.inv  py-modindex.html  pyproject.toml  release-procedure.md  remote_data.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  see-also.html  setup.cfg  setup.py  test.sh  testrunner.py  tox.ini  versioneer.py  whatsnew.html
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  coverage.yml
.pytest_cache/v/cache/: lastfailed  nodeids
_sources/: remote_data.rst.txt  see-also.rst.txt  whatsnew.rst.txt
_sources/readers/: enigma.rst.txt  iex.rst.txt  index.rst.txt  nasdaq-trader.rst.txt  naver.rst.txt  tiingo.rst.txt
_static/: basic.css  documentation_options.js  pygments.css
ci/: pypi-install.sh
ci/azure/: azure_template_posix.yml  azure_template_windows.yml
conda.recipe/: meta.yaml
devel/: .doctr-files  cache.html  genindex.html  index.html  objects.inv  py-modindex.html  remote_data.html  search.html  searchindex.js  see-also.html  whatsnew.html
devel/_sources/: cache.rst.txt  index.rst.txt  remote_data.rst.txt  whatsnew.rst.txt
devel/_sources/readers/: bank-of-canada.rst.txt  eurostat.rst.txt  index.rst.txt  oecd.rst.txt  world-bank.rst.txt
devel/_static/: documentation_options.js  webpack-macros.html
devel/_static/css/: index.101715efdecc9b59cb6e1ddfa685c31f.css  index.ee6fb81b276d6fba8a971ad8e9b95dd9.css  index.f6b7ca918bee2f46fd9abac01cfb07d5.css  theme.css
devel/readers/: alphavantage.html  bank-of-canada.html  econdb.html  enigma.html  eurostat.html  famafrench.html  fred.html  iex.html  index.html  moex.html  morningstar.html  nasdaq-trader.html  naver.html  oecd.html  quandl.html  robinhood.html  stooq.html  tiingo.html  tsp.html  world-bank.html  yahoo.html
docs/: Makefile  cache.sqlite  contributors.py  make.bat  requirements.txt
docs/source/: _version.txt  cache.rst  conf.py  index.rst  remote_data.rst  see-also.rst  whatsnew.rst
docs/source/readers/: alphavantage.rst  bcb.rst  crypto.rst  econdb.rst  enigma.rst  famafrench.rst  fred.rst  iex.rst  index.rst  morningstar.rst  quandl.rst  robinhood.rst  stooq.rst  tse.rst  tsp.rst
docs/source/whatsnew/: v.0.9.1.txt  v0.10.0.txt  v0.11.0.txt  v0.2.0.txt  v0.2.1.txt  v0.2.2.txt  v0.2.3.txt  v0.3.0.txt  v0.3.1.txt  v0.4.0.txt  v0.5.0.txt  v0.6.0.txt  v0.7.0.txt  v0.7.0.txt.bak  v0.8.0.txt  v0.9.0.txt  v0.9.1.txt  vLATEST.txt
docs/superpowers/plans/: 2026-04-10-macro-modern-api.md
pandas-datareader/: __init__.py
pandas_data_readers/tests/: test_data.py  test_wb.py
pandas_datareader/: __init__.py  _decorators.py  _testing.py  _utils.py  _version.py  bankofcanada.py  base.py  bcb.py  cli_pandas_datareader.py  commons.py  conftest.py  crypto.py  crypto_reader.py  data.py  date_chunks.py  econdb.py  edgar.py  enigma.py  eurostat.py  exceptions.py  famafrench.py  fred.py  moex.py  nasdaq_trader.py  naver.py  oanda.py  oandarest.py  oecd.py  quandl.py  robinhood.py  shared.py  stooq.py  tiingo.py  truefx.py  tse.py  tsp.py  utils.py  wb.py
pandas_datareader/av/: __init__.py  forex.py  quotes.py  sector.py  time_series.py
pandas_datareader/binance/: __init__.py
pandas_datareader/commons/: __init__.py  url_request.py
pandas_datareader/compat/: __init__.py
pandas_datareader/crypto/: _paths.py  exchange.py  mapping.py  utilities.py
pandas_datareader/crypto_utils/: _paths.py  exchange.py  mapping.py  test_apis.py  time_helper.py  utilities.py
pandas_datareader/datareaders/: famafrench.py  fred.py  google_finance.py  google_finance_daily.py  google_finance_quotes.py  yahoo_finance.py  yahoo_finance_actions.py  yahoo_finance_components.py  yahoo_finance_daily.py  yahoo_finance_options.py
pandas_datareader/google/: __init__.py  daily.py  hist.py  options.py  quotes.py
pandas_datareader/iex/: __init__.py  daily.py  deep.py  market.py  ref.py  stats.py  tops.py
pandas_datareader/io/: __init__.py  jsdmx.py  sdmx.py  util.py
pandas_datareader/io/tests/: test_jsdmx.py  (+1 more)
pandas_datareader/macro/: __init__.py  api.py  base.py  eurostat.py  oecd.py  result.py
pandas_datareader/mstar/: __init__.py  daily.py  financials.py
pandas_datareader/quandl/: daily.py  quotes.py
pandas_datareader/tests/: _utils.py  test_bankofcanada.py  test_base.py  test_bcb.py  test_compat_version.py  test_cryptoreader.py  test_data.py  test_deprecate_kwarg.py  test_econdb.py  test_edgar.py  test_enigma.py  test_eurostat.py  test_eurostat_reader.py  test_famafrench.py  test_fred.py  test_google.py  test_google_options.py  test_iex.py  test_iex_daily.py  test_moex.py  test_nasdaq.py  test_naver.py  test_oanda.py  test_oandarest.py  test_oecd.py  test_quandl.py  test_robinhood.py  test_stooq.py  test_tiingo.py  test_truefx.py  test_tse.py  test_tsp.py  test_utils.py  test_wb.py  test_yahoo.py  test_yahoo_options.py
pandas_datareader/yahoo/: FX.py  __init__.py  actions.py  components.py  daily.py  fx.py  headers.py  options.py  quotes.py
readers/: alphavantage.html  bank-of-canada.html  econdb.html  enigma.html  eurostat.html  famafrench.html  fred.html  iex.html  index.html  moex.html  nasdaq-trader.html  naver.html  oecd.html  quandl.html  stooq.html  tiingo.html  tsp.html  world-bank.html  yahoo.html
stable/: .doctr-files  cache.html  genindex.html  index.html  objects.inv  py-modindex.html  remote_data.html  search.html  searchindex.js  see-also.html  whatsnew.html
stable/_sources/: cache.rst.txt  index.rst.txt  see-also.rst.txt  whatsnew.rst.txt
stable/_static/: documentation_options.js
stable/readers/: bank-of-canada.html  enigma.html  eurostat.html  famafrench.html  fred.html  iex.html  index.html  nasdaq-trader.html  oecd.html  quandl.html  robinhood.html  stooq.html  tsp.html  world-bank.html
tests/: test_deprecate_kwarg_compat.py  test_import_smoke.py
(+155 files in other folders)
