[metadata]
name = pandas-datareader
description = Pandas-compatible data readers. Formerly a component of pandas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pandas.pydata.org
author = The PyData Development Team
author_email = pydata@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE.md
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/pydata/pandas-datareader/issues
    Documentation = http://pydata.github.io/pandas-datareader
    Source Code = https://github.com/pydata/pandas-datareader

[versioneer]
VCS = git
style = pep440
versionfile_source = pandas_datareader/_version.py
versionfile_build = pandas_datareader/_version.py
tag_prefix = v

[isort]
known_compat=pandas_datareader.compat.*
sections=FUTURE,COMPAT,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party=pandas_datareader
known_third_party=numpy,pandas,pytest,requests
combine_as_imports=True
force_sort_within_sections=True
profile=black

[tool:pytest]
# sync minversion with setup.cfg & install.rst
minversion = 5.0.1
testpaths = pandas_datareader
# tests not marked as stable are unstable
markers =
    stable: mark a test as applying to a stable reader
    requires_api_key: mark a test as requiring an API key
    alpha_vantage: mark a test of the AlphaVantage reader
    quandl: mark a test of the Quandl reader
filterwarnings =
    ignore:`np.bool` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.float` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.complex` is a deprecated alias:DeprecationWarning:pandas.core.indexes
    ignore:`np.bool` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.internals.construction
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.io.parsers
    ignore:`np.object` is a deprecated alias:DeprecationWarning:pandas.core.dtypes.cast
    ignore:`np.float` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:`np.complex` is a deprecated alias:DeprecationWarning:pandas.core.internals.blocks
    ignore:Converting `np.inexact` or `np.floating` to a dtype:DeprecationWarning:pandas.core.indexes

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
